# AllProjects

./: .gitignore  FINALSEMprepare.txt  New Text Document.txt  README.md
Android studio/BroadcastReceiver/: settings.gradle
Android studio/CodeLabs/: settings.gradle
Android studio/DialogieActivity/: settings.gradle
Android studio/ElderlyHelperApp/: build.gradle  settings.gradle
Android studio/GFGCovidVaccine/: covidvaccine.jks  local_history.patch  settings.gradle
Android studio/GetMessage/: settings.gradle
Android studio/GroceryApp/: local.properties
Android studio/IBM/: .floo  settings.gradle
Android studio/Locationpincode/: settings.gradle
Android studio/MusicPlaylistCopy/: build.gradle.kts  gradle.properties  settings.gradle.kts
Android studio/MyHandwritingAndroid/: README.md  build.gradle  local.properties
Android studio/Steps/: settings.gradle
Android studio/SwipeExample/: settings.gradle
Android studio/Training/: settings.gradle
Android studio/Widhets/: settings.gradle
Android studio/battery/: settings.gradle
Android studio/getsms/: settings.gradle
Android studio/implicit/: settings.gradle
Android studio/phpDB/: settings.gradle
Android studio/qr2/: gradle.properties  settings.gradle
Android studio/qrcreator/: settings.gradle
CODE HELP/C++/: hello.cpp
CODE HELP/Graphs/: code.txt  hello.java  nqueens.java
C_C++/learningc/codewithharry/: 14_LinkedList.c  21_doubly_linked_list.c  CMakeLists.txt  fractals.c  opengl.c
C_C++/learningc/codewithharry/shapes/: shapes.c
FLUTTER/: FLUTTER COURSE STRUCTURE.docx
WEB/: index.html
(+2061 files in other folders)
